# OpenGov-EarlyFrench

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_READY.md  Makefile  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  PUBLISH_INSTRUCTIONS.md  QUICK_START.md  README.md  VALIDATION_COMPLETE.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
opengov_earlyfrench/: __init__.py  cli.py  config.py
opengov_earlyfrench/ai/: __init__.py  conversation.py
opengov_earlyfrench/api/: __init__.py  main.py
opengov_earlyfrench/core/: __init__.py  gender_teacher.py  models.py  pronunciation_coach.py  verb_conjugator.py
opengov_earlyfrench/utils/: __init__.py  logger.py
scripts/: build.sh  deploy.sh  francais  test.sh  validate.sh
tests/: __init__.py  conftest.py  test_ai_conversation.py  test_api.py  test_api_chat.py  test_cli.py  test_config.py  test_gender_teacher.py  test_pronunciation_coach.py  test_verb_conjugator.py  test_verb_conjugator_extra.py
